--- a/.github/workflows/close-issues-custom-pattern.yml
+++ b/.github/workflows/close-issues-custom-pattern.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   close-issues:
-    runs-on: ubuntu:25.04
+    runs-on: ubuntu-25.04
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     steps:
       - name: Checkout repository
